[package]
name        = "quick-calc"
version     = "0.2.1"
description = "A CLI tool for quick decimal, hexadecimal, binary, and octal calcs"
authors     = ["RJ Rybarczyk <rj@rybar.tech>"]
homepage    = "https://github.com/rrybarczyk/quick-calc"
license     = "CC0-1.0"
readme      = "README.md"
edition     = "2018"

[[bin]]
name = "qcal"
path = "src/main.rs"
