[package]
name        = "quick-calc"
version     = "0.3.0"
description = "A cli tool for quick decimal, hexadecimal, binary, and octal basic formatting and calculations"
authors     = ["RJ Rybarczyk <rj@rybar.tech>"]
homepage    = "https://github.com/rrybarczyk/quick-calc"
license     = "CC0-1.0"
readme      = "README.md"
edition     = "2018"
build       = "build.rs"


[package.metadata.configure_me]
spec = "config_spec.toml"

[[bin]]
name = "qcal"
path = "src/main.rs"

[dependencies]
configure_me = "0.3.3"

[build-dependencies]
configure_me_codegen = "0.3.11"
