[package]
name        = "quick-calc"
version     = "0.3.0"
description = "A cli tool for quick decimal, hexadecimal, binary, and octal basic formatting and calculations"
authors     = ["RJ Rybarczyk <rj@rybar.tech>"]
homepage    = "https://github.com/rrybarczyk/quick-calc"
license     = "CC0-1.0"
readme      = "README.md"
edition     = "2018"

[[bin]]
name = "qcal"
path = "src/main.rs"

[dependencies]
structopt = "0.3.4"
